[package]
authors = ["Alec Lanter <kintar1900@gmail.com>"]
name = "rpembassy1"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.3",features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["critical-section-impl", "time-driver", "rom-func-cache","intrinsics", "defmt"] }
embassy-time = "0.3.2"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
